# hpcl

./: AUTHORS  Makefile.am  Makefile.in  configure  configure.ac  getCscope
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
examples/controller/: Makefile  agent.cpp  controller.cpp  execd.cpp  logd.cpp  messages.h  ports.h
examples/execd/: .client.cpp.swp  client.cpp  server.cpp
examples/local_communication/: Makefile  client.cpp  server.cpp
examples/simple_echo/: Makefile  client.cpp  server.cpp
examples/simple_exec/: Makefile  client.cpp  server.cpp
examples/simple_logging/: Makefile  client.cpp  server.cpp
examples/simple_messaging/: Makefile  client.cpp  messages.h  server.cpp
examples/simple_naming/: .client.cpp.swp  .server.cpp.swp  Makefile  client.cpp  server.cpp
source/: Makefile.am  Makefile.in
source/common/: Makefile.am  Makefile.in
source/common/include/: Makefile.am  Makefile.in  buffer.h  common_pointer_types.h  error_id.h  notifier.h  print.h  semantic_error.h  syscall_error.h
source/common/src/: Makefile.am  Makefile.in  buffer.cpp  notifier.cpp  print.cpp
source/communication/: Makefile.am  Makefile.in
source/communication/include/: Makefile.am  Makefile.in  communication_pointer_types.h  local_communicator.h  meminfo.h  server_socket.h  socket.h  socket_factory.h
source/communication/src/: Makefile.am  Makefile.in  local_communicator.cpp  meminfo.cpp  server_socket.cpp  socket.cpp  socket_factory.cpp
source/data/: Makefile.in
source/data/include/: Makefile.am  Makefile.in  data_component_factory.h  data_messages.h  data_pointer_types.h  data_server.h  host_info.h  name_service_client.h  service_info.h
source/data/src/: Makefile.am  Makefile.in  data_component_factory.cpp  data_server.cpp  host_info.cpp  name_service_client.cpp  service_info.cpp
source/logging/: Makefile.in
source/logging/include/: Makefile.am  Makefile.in  logging_component_factory.h  logging_pointer_types.h  remote_log_server.h  remote_logger.h
source/logging/src/: Makefile.am  Makefile.in  logging_component_factory.cpp  remote_log_server.cpp  remote_logger.cpp
source/messaging/: Makefile.in
source/messaging/include/: Makefile.am  Makefile.in  communicator.h  message_client.h  message_component_factory.h  message_server.h  messaging_messages.h  messaging_pointer_types.h  messaging_types_fwd.h
source/messaging/src/: Makefile.am  Makefile.in  message_client.cpp  message_component_factory.cpp  message_server.cpp
source/remote-exec/: Makefile.in
source/remote-exec/include/: Makefile.am  Makefile.in  child_process.h  exec_client.h  exec_message.h  exec_server.h  remote_exec_component_factory.h  remote_exec_pointer_types.h  remote_process.h
source/remote-exec/src/: Makefile.am  Makefile.in  child_process.cpp  exec_client.cpp  exec_server.cpp  remote_exec_component_factory.cpp  remote_process.cpp
